# Eidolon-test

./: .env.example  .gitignore  AGENTS.md  Codex_questions.md  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_level2_state.py  0003_conversation_privacy.py  0004_conversation_read_state.py  0005_login_throttles.py  0006_auth_throttles.py  0007_memory_forgetting.py  0008_diagnostic_events.py  0009_companion_intelligence.py  0010_living_threads.py  0011_witnessed_continuity.py  0012_living_memory.py  0013_relationship_intelligence.py  0014_proactive_presence.py
apps/api/app/: __init__.py  config.py  dependencies.py  main.py  models.py  schemas.py  security.py
apps/api/app/api/: auth.py  characters.py  chat.py  continuity.py  conversations.py  debug.py  export.py  health.py  journal.py  memory.py  proactive.py
apps/api/tests/: conftest.py  helpers.py  test_auth_chat.py  test_companion_generation.py  test_companion_intelligence.py  test_config.py  test_continuity_threads.py  test_conversation_scenario.py  test_diagnostics.py  test_groq.py  test_groq_live.py  test_grounded_cognition.py  test_health.py  test_jobs_proactive_export.py  test_level2_state.py  test_live_chat_pipeline.py  test_living_memory.py  test_llm_providers.py  test_memory_embeddings.py  test_migrations.py  test_ollama.py  test_proactive_presence.py  test_proactive_relationship.py  test_prompt_memory_relationship.py  test_relationship_intelligence.py  test_security.py
(+133 files in other folders)
