[project]
name = "eidolon-api"
version = "0.1.0"
description = "Private text-only Eidolon API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "argon2-cffi>=23.1,<26.0",
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "PyJWT>=2.8,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
